removed .project height:100% declaration to see if that fixes the project cards on iOS browsers

--- a/style/style.css
+++ b/style/style.css
@@ -513,7 +513,7 @@ body.open {
 	/* grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr)); */
 	width: 100%;
 	max-width: 60ch;
-	height: 100%;
+	/* height: 100%; */
 
 	/* margin-right: var(--s4); */
 	/* outline: 2px dashed yellow; */
